8_1_hands_on_crashloopbackoff 실습 케이스 2번 추가